# cookiecutter-python-package

./: README.md  cookiecutter.json  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: dev.yml  publish.yml
tests/: test_template.py
{{cookiecutter.project_name}}/: CHANGELOG.md  README.md  pylintrc  setup.cfg  tox.ini
{{cookiecutter.project_name}}/.github/workflows/: dev.yml  publish.yml
{{cookiecutter.project_name}}/src/{{cookiecutter.package_name}}/: __init__.py  cli.py  my_module.py
{{cookiecutter.project_name}}/src/{{cookiecutter.package_name}}/data/: content.txt
{{cookiecutter.project_name}}/tests/: test_my_module.py
