# setup.cfg

[metadata]
author = Gareth Stockwell
author_email = gareth.stockwell@gmail.com
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
description = cookiecutter template for a Python package
keywords =
long_description = file: README.md
long_description_content_type = text/markdown
name = cookiecutter-python-package
project_urls =
url =
version = 0.1.0

[options]
install_requires =
    cookiecutter>=2.1.1
packages =
python_requires = >=3.7
zip_safe = False

[options.extras_require]
dev =
    pylint~=2.16.3
    black~=23.1.0
    ddt
    pytest
    pytest-cookies
