# setup.cfg

[metadata]
author = {{cookiecutter.author_name}}
author_email = {{cookiecutter.author_email}}
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
description = {{cookiecutter.project_short_description}}
keywords =
long_description = file: README.md
long_description_content_type = text/markdown
name = {{cookiecutter.project_name}}
project_urls =
url =
version = 0.1.0

[options]
install_requires =
package_dir =
    = src
packages = find:
python_requires = >=3.7
zip_safe = False

[options.entry_points]
console_scripts =
    {{cookiecutter.project_name}} = {{cookiecutter.package_name}}.cli:main

[options.extras_require]
dev =
    pylint~=2.16.3
    black~=23.1.0
    ddt
    pytest
    pytest-cov

[options.package_data]
* = data/*

[options.packages.find]
where = src
